--- a/election-api/Gemfile
+++ b/election-api/Gemfile
@@ -5,6 +5,8 @@ git_source(:github) do |repo_name|
   "https://github.com/#{repo_name}.git"
 end
 
+# (Solving issue with rails c) Ref: http://asayamakk.hatenablog.com/entry/2016/12/26/030053
+gem 'rb-readline'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.1'
