--- a/election-api/Gemfile
+++ b/election-api/Gemfile
@@ -12,6 +12,8 @@ gem 'rb-readline'
 gem 'rails', '~> 5.0.1'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
+# postgres
+gem 'pg'
 # Use Puma as the app server
 gem 'puma', '~> 3.0'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
