--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -5,7 +5,6 @@
     "ember-cli-shims": "0.1.3",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.6.3",
-    "chartjs": "2.1.6",
-    "datamaps": "^0.5.8"
+    "chartjs": "2.1.6"
   }
 }
