--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
+    "ember-browserify": "1.1.13",
     "ember-cli": "2.10.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
@@ -44,6 +45,8 @@
   },
   "private": true,
   "dependencies": {
-    "ember-cli-chartjs": "2.4.0"
+    "d3": "4.5.0",
+    "ember-cli-chartjs": "2.4.0",
+    "topojson": "2.2.0"
   }
 }
