--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
   "private": true,
   "dependencies": {
     "d3": "4.5.0",
+    "d3-tile": "0.0.3",
     "ember-cli-chartjs": "2.4.0",
     "topojson": "2.2.0"
   }
