--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^2.0.1",
+    "ember-cli-nouislider": "0.13.0",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "5.3.1",
@@ -51,7 +52,6 @@
     "d3": "4.5.0",
     "d3-tile": "0.0.3",
     "ember-cli-chartjs": "2.4.0",
-    "nouislider": "^10.0.0",
     "topojson": "2.2.0"
   }
 }
