--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "d3": "4.5.0",
     "d3-tile": "0.0.3",
     "ember-cli-chartjs": "2.4.0",
+    "progressbar.js": "^1.0.1",
     "topojson": "2.2.0"
   }
 }
