--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-power-select": "1.6.1",
     "ember-resolver": "^2.0.3",
+    "ember-route-action-helper": "2.0.3",
     "ember-welcome-page": "^1.0.3",
     "liquid-fire": "0.27.0",
     "loader.js": "^4.0.10"
@@ -50,6 +51,7 @@
   "private": true,
   "dependencies": {
     "d3": "4.5.0",
+    "d3-scale-chromatic": "1.1.1",
     "d3-tile": "0.0.3",
     "ember-cli-chartjs": "2.4.0",
     "progressbar.js": "^1.0.1",
