--- a/election-api/Gemfile
+++ b/election-api/Gemfile
@@ -27,6 +27,9 @@ gem 'puma', '~> 3.0'
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 gem 'rack-cors'
 
+# Devise
+gem 'devise'
+
 # Serialization
 gem 'active_model_serializers', '~> 0.10.0'
 
