Setup token management to users

--- a/election-api/Gemfile
+++ b/election-api/Gemfile
@@ -29,6 +29,7 @@ gem 'rack-cors'
 
 # Devise
 gem 'devise'
+gem 'simple_token_authentication', '~> 1.0'
 
 # Serialization
 gem 'active_model_serializers', '~> 0.10.0'
