--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,7 +54,9 @@
     "d3-scale-chromatic": "1.1.1",
     "d3-tile": "0.0.3",
     "ember-cli-chartjs": "2.4.0",
+    "npm": "^5.3.0",
     "progressbar.js": "^1.0.1",
-    "topojson": "2.2.0"
+    "topojson": "2.2.0",
+    "ui-ember-slider": "^0.5.0"
   }
 }
