--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "ember-data": "^2.10.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-notify": "5.2.1",
     "ember-power-select": "1.6.1",
     "ember-resolver": "^2.0.3",
     "ember-route-action-helper": "2.0.3",
