--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "2.5.6",
+    "ember-basic-dropdown": "0.33.5",
     "ember-browserify": "1.1.13",
     "ember-cli": "2.10.0",
     "ember-cli-app-version": "^2.0.0",
