--- a/election-api/Gemfile
+++ b/election-api/Gemfile
@@ -45,6 +45,7 @@ group :development, :test do
 end
 
 group :development do
+  gem 'awesome_print'
   gem 'rails-erd'
   gem 'listen', '~> 3.0.5'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
