--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "ember-concurrency": "0.8.3",
     "ember-data": "^2.10.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-infinity": "0.2.8",
     "ember-load-initializers": "^0.5.1",
     "ember-notify": "5.2.1",
     "ember-power-select": "1.6.1",
