--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "ember-cli": "2.10.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
+    "ember-cli-bootstrap-datepicker": "0.5.6",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
