--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "ember-resolver": "^2.0.3",
     "ember-route-action-helper": "2.0.3",
     "ember-simple-auth": "1.4.0",
+    "ember-toggle": "5.1.2",
     "ember-welcome-page": "^1.0.3",
     "liquid-fire": "0.27.0",
     "loader.js": "^4.0.10"
@@ -58,6 +59,7 @@
     "d3-scale-chromatic": "1.1.1",
     "d3-tile": "0.0.3",
     "ember-cli-chartjs": "2.4.0",
+    "ember-toggle": "5.1.2",
     "npm": "^5.3.0",
     "progressbar.js": "^1.0.1",
     "topojson": "2.2.0",
