--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "ember-route-action-helper": "2.0.3",
     "ember-simple-auth": "1.4.0",
     "ember-welcome-page": "^1.0.3",
+    "emberx-select": "3.1.0",
     "liquid-fire": "0.27.0",
     "loader.js": "^4.0.10"
   },
