--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "ember-ajax": "2.5.6",
     "ember-basic-dropdown": "0.33.5",
     "ember-browserify": "1.1.13",
+    "ember-can": "0.8.4",
     "ember-cli": "2.10.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
