--- a/election-api/Gemfile
+++ b/election-api/Gemfile
@@ -27,6 +27,8 @@ gem 'puma', '~> 3.0'
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 gem 'rack-cors'
 
+gem 'kaminari'
+
 # Devise
 gem 'devise'
 gem 'simple_token_authentication', '~> 1.0'
