Added supervisor dashboard
People and geoData filters are now working

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "ember-route-action-helper": "2.0.3",
     "ember-simple-auth": "1.4.0",
     "ember-toggle": "5.1.2",
+    "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^1.0.3",
     "emberx-select": "3.1.0",
     "liquid-fire": "0.27.0",
@@ -61,11 +62,11 @@
   },
   "private": true,
   "dependencies": {
+    "chartkick": "^2.2.4",
     "d3": "4.5.0",
     "d3-scale-chromatic": "1.1.1",
     "d3-tile": "0.0.3",
     "ember-cli-chartjs": "2.4.0",
-    "chartkick": "^2.2.4",
     "ember-toggle": "5.1.2",
     "npm": "^5.3.0",
     "progressbar.js": "^1.0.1",
